--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "url": "https://bitbucket.org/idfivellc/idfive-component-library"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.2",
+    "bootstrap": "^5.1.3",
     "flickity": "^2.1.2",
     "flickity-imagesloaded": "^2.0.0",
     "focus-within": "^3.0.2",
