--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "style-loader": "^0.16.1",
     "terser-webpack-plugin": "^1.2.1",
     "ts-loader": "^5.1.0",
-    "typescript": "^3.7.2",
+    "typescript": "^3.8.0",
     "url-loader": "^1.1.1",
     "vue-loader": "^15.8.3",
     "vue-template-compiler": "^2.6.11",
@@ -63,6 +63,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.2",
+    "@types/bootstrap": "^5.1.9",
     "bootstrap": "^5.1.3",
     "flickity": "^2.1.2",
     "flickity-imagesloaded": "^2.0.0",
