--- a/src/components/pages/kitchen-sink.config.json
+++ b/src/components/pages/kitchen-sink.config.json
@@ -67,6 +67,117 @@
         "statistic_text": "Sed ut perspiciatis unde omnis iste natus error sit voluptatem"
       },
       "text": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>"
+    },
+    "callout_with_image": {
+      "image": "../../img/Component-Feature-Image-Small.jpg",
+      "title": "Heading 2 - This is a title of major section of a page",
+      "body_copy": "Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni lorem ipsem. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni lorem ipsem.",
+      "button": {
+        "text": "Primary CTA Style",
+        "url": "#"
+      }
+    },
+    "callout_with_image_small_set_one": {
+      "callouts": [
+        {
+          "image": "../../img/Component-Featured-Image-Small_FPO.jpg",
+          "title": "Feature Title Lorem Ipsum Dolor",
+          "body_copy": "Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
+          "links": [
+            {
+              "url": "https://iastate.edu",
+              "text": "Link Lorem Ipsum Dolor",
+              "variant": "link-secondary"
+            }
+          ]
+        }
+      ]
+    },
+    "callout_with_image_small_set_two": {
+      "callouts": [
+        {
+          "image": "../../img/Component-Featured-Image-Small_FPO.jpg",
+          "title": "Feature Title Lorem Ipsum Dolor",
+          "body_copy": "Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
+          "links": [
+            {
+              "url": "https://iastate.edu",
+              "text": "Link Lorem Ipsum Dolor",
+              "variant": "link-secondary"
+            }
+          ]
+        },
+        {
+          "image": "../../img/Component-Featured-Image-Small-2_FPO.jpg",
+          "title": "Feature Title Lorem Ipsum Dolor",
+          "body_copy": "Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
+          "links": [
+            {
+              "url": "https://iastate.edu",
+              "text": "Link Lorem Ipsum Dolor",
+              "variant": "link-secondary"
+            }
+          ]
+        }
+      ]
+    },
+    "callout_with_image_small_set_three": {
+      "callouts": [
+        {
+          "image": "../../img/Component-Featured-Image-Small_FPO.jpg",
+          "title": "Feature Title Lorem Ipsum Dolor",
+          "body_copy": "Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
+          "links": [
+            {
+              "url": "https://iastate.edu",
+              "text": "Link Lorem Ipsum Dolor",
+              "variant": "link-secondary"
+            }
+          ]
+        },
+        {
+          "image": "../../img/Component-Featured-Image-Small-2_FPO.jpg",
+          "title": "Feature Title Lorem Ipsum Dolor",
+          "body_copy": "Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
+          "links": [
+            {
+              "url": "https://iastate.edu",
+              "text": "Link Lorem Ipsum Dolor",
+              "variant": "link-secondary"
+            }
+          ]
+        },
+        {
+          "image": "../../img/Component-Featured-Image-Small_FPO.jpg",
+          "title": "Feature Title Lorem Ipsum Dolor",
+          "body_copy": "Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
+          "links": [
+            {
+              "url": "https://iastate.edu",
+              "text": "Link Lorem Ipsum Dolor",
+              "variant": "link-secondary"
+            }
+          ]
+        }
+      ]
+    },
+    "image_grid_with_text": {
+      "title": "Image Grid with H2 Title and CTA",
+      "copy": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>",
+      "image_grid": {
+        "image_one": "../../img/IMG-Campus-Location-Large-Image.jpg",
+        "image_two": "../../img/IMG-Campus-Location-Large-Image.jpg",
+        "image_three": "../../img/IMG-Campus-Location-Large-Image.jpg",
+        "caption": "Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur"
+      },
+      "button_set": {
+        "items": [
+          {
+            "text": "Primary CTA Styles",
+            "url": "https://iastate.edu"
+          }
+        ]
+      }
     }
   }
 }
