--- a/src/components/pages/kitchen-sink.config.json
+++ b/src/components/pages/kitchen-sink.config.json
@@ -83,13 +83,15 @@
           "image": "../../img/Component-Featured-Image-Small_FPO.jpg",
           "title": "Feature Title Lorem Ipsum Dolor",
           "body_copy": "Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
-          "links": [
-            {
-              "url": "https://iastate.edu",
-              "text": "Link Lorem Ipsum Dolor",
-              "variant": "link-secondary"
-            }
-          ]
+          "link_set": {
+            "links": [
+              {
+                "url": "https://iastate.edu",
+                "text": "Link Lorem Ipsum Dolor",
+                "variant": "link-secondary"
+              }
+            ]
+          }
         }
       ]
     },
@@ -99,25 +101,29 @@
           "image": "../../img/Component-Featured-Image-Small_FPO.jpg",
           "title": "Feature Title Lorem Ipsum Dolor",
           "body_copy": "Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
-          "links": [
-            {
-              "url": "https://iastate.edu",
-              "text": "Link Lorem Ipsum Dolor",
-              "variant": "link-secondary"
-            }
-          ]
+          "link_set": {
+            "links": [
+              {
+                "url": "https://iastate.edu",
+                "text": "Link Lorem Ipsum Dolor",
+                "variant": "link-secondary"
+              }
+            ]
+          }
         },
         {
           "image": "../../img/Component-Featured-Image-Small-2_FPO.jpg",
           "title": "Feature Title Lorem Ipsum Dolor",
           "body_copy": "Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
-          "links": [
-            {
-              "url": "https://iastate.edu",
-              "text": "Link Lorem Ipsum Dolor",
-              "variant": "link-secondary"
-            }
-          ]
+          "link_set": {
+            "links": [
+              {
+                "url": "https://iastate.edu",
+                "text": "Link Lorem Ipsum Dolor",
+                "variant": "link-secondary"
+              }
+            ]
+          }
         }
       ]
     },
@@ -127,37 +133,43 @@
           "image": "../../img/Component-Featured-Image-Small_FPO.jpg",
           "title": "Feature Title Lorem Ipsum Dolor",
           "body_copy": "Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
-          "links": [
-            {
-              "url": "https://iastate.edu",
-              "text": "Link Lorem Ipsum Dolor",
-              "variant": "link-secondary"
-            }
-          ]
+          "link_set": {
+            "links": [
+              {
+                "url": "https://iastate.edu",
+                "text": "Link Lorem Ipsum Dolor",
+                "variant": "link-secondary"
+              }
+            ]
+          }
         },
         {
           "image": "../../img/Component-Featured-Image-Small-2_FPO.jpg",
           "title": "Feature Title Lorem Ipsum Dolor",
           "body_copy": "Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
-          "links": [
-            {
-              "url": "https://iastate.edu",
-              "text": "Link Lorem Ipsum Dolor",
-              "variant": "link-secondary"
-            }
-          ]
+          "link_set": {
+            "links": [
+              {
+                "url": "https://iastate.edu",
+                "text": "Link Lorem Ipsum Dolor",
+                "variant": "link-secondary"
+              }
+            ]
+          }
         },
         {
           "image": "../../img/Component-Featured-Image-Small_FPO.jpg",
           "title": "Feature Title Lorem Ipsum Dolor",
           "body_copy": "Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
-          "links": [
-            {
-              "url": "https://iastate.edu",
-              "text": "Link Lorem Ipsum Dolor",
-              "variant": "link-secondary"
-            }
-          ]
+          "link_set": {
+            "links": [
+              {
+                "url": "https://iastate.edu",
+                "text": "Link Lorem Ipsum Dolor",
+                "variant": "link-secondary"
+              }
+            ]
+          }
         }
       ]
     },
