--- a/src/components/pages/kitchen-sink.config.json
+++ b/src/components/pages/kitchen-sink.config.json
@@ -452,6 +452,19 @@
           }
         ]
       }
+    },
+    "call_to_action_large": {
+      "title": "Large Call to Action Voluptate Lorem",
+      "body": "<p>Nemo enim ipsam voluptatem quia voluptas.</p>",
+      "image": "../../img/CTA-Large-Image_FPO.jpg",
+      "button_set": {
+        "items": [
+          {
+            "text": "Primary CTA Style",
+            "url": "https://iastate.edu"
+          }
+        ]
+      }
     }
   }
 }
