breadcrumb component finalized

--- a/src/components/breadcrumb/breadcrumb.config.json
+++ b/src/components/breadcrumb/breadcrumb.config.json
@@ -2,16 +2,16 @@
   "context": {
     "links": [
       {
-        "url": "http://idfive",
+        "url": "https://www.iastate.edu/",
         "name": "Home"
       },
       {
-        "url": "http://idfive",
-        "name": "About"
+        "url": "https://www.iastate.edu/",
+        "name": "Parent Page"
       },
       {
-        "url": "http://idfive",
-        "name": "Team"
+        "url": "https://www.iastate.edu/",
+        "name": "Kitchen Sink"
       }
     ]
   }
