--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.2",
     "@types/bootstrap": "^5.1.9",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "bootstrap": "^5.1.3",
     "flickity": "^2.1.2",
     "flickity-imagesloaded": "^2.0.0",
