--- a/src/components/pages/kitchen-sink.config.json
+++ b/src/components/pages/kitchen-sink.config.json
@@ -113,6 +113,37 @@
         "<h3>2-Column Heading Lorem</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>"
       ]
     },
+    "full_width_image": {
+      "image": "../../img/Component-Centered-Image-Full-Width.jpg",
+      "caption": "Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim."
+    },
+    "table": {
+      "caption_ID": "caption1",
+      "table_caption": "Table Caption Example",
+      "headers": ["Long Header Lorem Ipsum Dolor Sit Amet", "Short Header", "Medium Header Lorem Ipsum"],
+      "rows": [
+        [
+          "Donec pede justo, fringilla vel, aliquet nec, vulputate",
+          "Donec pede justo, fringilla vel, aliquet nec, vulputate",
+          "Donec pede justo, fringilla vel, aliquet nec, vulputate"
+        ],
+        [
+          "Lorem ipsum dolor sit amet, consectetuer adipiscing elit.",
+          "Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.",
+          "Lorem ipsum dolor sit amet, consectetuer adipiscing elit."
+        ],
+        [
+          "Aenean massa nulla.",
+          "Nulla consequat massa quis enim.",
+          "Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem."
+        ],
+        [
+          "Sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.",
+          "Aenean commodo ligula eget dolor.",
+          "Nulla consequat massa quis enim."
+        ]
+      ]
+    },
     "accordion": {
       "id": "0",
       "sections": [
