--- a/src/components/table/table.config.json
+++ b/src/components/table/table.config.json
@@ -1,24 +1,28 @@
 {
   "context": {
-    "headers": ["Column One", "Column Two", "Column Three", "Column Four"],
+    "caption_ID": "caption1",
+    "table_caption": "Table Caption Example",
+    "headers": ["Long Header Lorem Ipsum Dolor Sit Amet", "Short Header", "Medium Header Lorem Ipsum"],
     "rows": [
       [
-        "Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum explicabo placeat dicta, dolores ipsam eligendi nulla temporibus magni voluptate numquam labore suscipit illum culpa modi aperiam at doloremque beatae ipsa?",
-        "Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum explicabo placeat dicta, dolores ipsam eligendi nulla temporibus magni voluptate numquam labore suscipit illum culpa modi aperiam at doloremque beatae ipsa?",
-        "Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum explicabo placeat dicta, dolores ipsam eligendi nulla temporibus magni voluptate numquam labore suscipit illum culpa modi aperiam at doloremque beatae ipsa?",
-        "Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum explicabo placeat dicta, dolores ipsam eligendi nulla temporibus magni voluptate numquam labore suscipit illum culpa modi aperiam at doloremque beatae ipsa?"
+        "Donec pede justo, fringilla vel, aliquet nec, vulputate",
+        "Donec pede justo, fringilla vel, aliquet nec, vulputate",
+        "Donec pede justo, fringilla vel, aliquet nec, vulputate"
       ],
       [
-        "Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum explicabo placeat dicta, dolores ipsam eligendi nulla temporibus magni voluptate numquam labore suscipit illum culpa modi aperiam at doloremque beatae ipsa?",
-        "Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum explicabo placeat dicta, dolores ipsam eligendi nulla temporibus magni voluptate numquam labore suscipit illum culpa modi aperiam at doloremque beatae ipsa?",
-        "Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum explicabo placeat dicta, dolores ipsam eligendi nulla temporibus magni voluptate numquam labore suscipit illum culpa modi aperiam at doloremque beatae ipsa?",
-        "Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum explicabo placeat dicta, dolores ipsam eligendi nulla temporibus magni voluptate numquam labore suscipit illum culpa modi aperiam at doloremque beatae ipsa?"
+        "Lorem ipsum dolor sit amet, consectetuer adipiscing elit.",
+        "Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.",
+        "Lorem ipsum dolor sit amet, consectetuer adipiscing elit."
       ],
       [
-        "Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum explicabo placeat dicta, dolores ipsam eligendi nulla temporibus magni voluptate numquam labore suscipit illum culpa modi aperiam at doloremque beatae ipsa?",
-        "Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum explicabo placeat dicta, dolores ipsam eligendi nulla temporibus magni voluptate numquam labore suscipit illum culpa modi aperiam at doloremque beatae ipsa?",
-        "Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum explicabo placeat dicta, dolores ipsam eligendi nulla temporibus magni voluptate numquam labore suscipit illum culpa modi aperiam at doloremque beatae ipsa?",
-        "Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum explicabo placeat dicta, dolores ipsam eligendi nulla temporibus magni voluptate numquam labore suscipit illum culpa modi aperiam at doloremque beatae ipsa?"
+        "Aenean massa nulla.",
+        "Nulla consequat massa quis enim.",
+        "Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem."
+      ],
+      [
+        "Sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.",
+        "Aenean commodo ligula eget dolor.",
+        "Nulla consequat massa quis enim."
       ]
     ]
   }
