--- a/src/components/hero/hero.config.json
+++ b/src/components/hero/hero.config.json
@@ -21,42 +21,42 @@
     "subnav": {
       "items": [
         {
-          "url": "placeholder-link",
+          "url": "https://www.iastate.edu/",
           "title": "Parent Page",
           "current": false,
           "children": []
         },
         {
-          "url": "placeholder-link",
+          "url": "https://www.iastate.edu/",
           "title": "Sibling Page Title Lorem Ipsum",
           "current": false,
           "children": []
         },
         {
-          "url": "placeholder-link",
+          "url": "https://www.iastate.edu/",
           "title": "Sibling Page Title Lorem Ipsum",
           "current": false,
           "children": []
         },
         {
-          "url": "placeholder-link",
+          "url": "https://www.iastate.edu/",
           "title": "Sibling Page Title Lorem Ipsum",
           "current": false,
           "children": []
         },
         {
-          "url": "placeholder-link",
+          "url": "https://www.iastate.edu/",
           "title": "Kitchen Sink",
           "current": true,
           "children": [
             {
-              "url": "placeholder-link",
+              "url": "https://www.iastate.edu/",
               "title": "Child Page Title Lorem",
               "current": false,
               "children": []
             },
             {
-              "url": "placeholder-link",
+              "url": "https://www.iastate.edu/",
               "title": "Child Page Title Lorem",
               "current": false,
               "children": []
@@ -64,7 +64,7 @@
           ]
         },
         {
-          "url": "placeholder-link",
+          "url": "https://www.iastate.edu/",
           "title": "Sibling Page Title Lorem Ipsum",
           "current": false,
           "children": []
