--- a/src/components/pages/kitchen-sink.config.json
+++ b/src/components/pages/kitchen-sink.config.json
@@ -23,42 +23,42 @@
       "subnav": {
         "items": [
           {
-            "url": "placeholder-link",
+            "url": "https://www.iastate.edu/",
             "title": "Parent Page",
             "current": false,
             "children": []
           },
           {
-            "url": "placeholder-link",
+            "url": "https://www.iastate.edu/",
             "title": "Sibling Page Title Lorem Ipsum",
             "current": false,
             "children": []
           },
           {
-            "url": "placeholder-link",
+            "url": "https://www.iastate.edu/",
             "title": "Sibling Page Title Lorem Ipsum",
             "current": false,
             "children": []
           },
           {
-            "url": "placeholder-link",
+            "url": "https://www.iastate.edu/",
             "title": "Sibling Page Title Lorem Ipsum",
             "current": false,
             "children": []
           },
           {
-            "url": "placeholder-link",
+            "url": "https://www.iastate.edu/",
             "title": "Kitchen Sink",
             "current": true,
             "children": [
               {
-                "url": "placeholder-link",
+                "url": "https://www.iastate.edu/",
                 "title": "Child Page Title Lorem",
                 "current": false,
                 "children": []
               },
               {
-                "url": "placeholder-link",
+                "url": "https://www.iastate.edu/",
                 "title": "Child Page Title Lorem",
                 "current": false,
                 "children": []
@@ -66,7 +66,7 @@
             ]
           },
           {
-            "url": "placeholder-link",
+            "url": "https://www.iastate.edu/",
             "title": "Sibling Page Title Lorem Ipsum",
             "current": false,
             "children": []
